<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    android:padding="@dimen/dm24"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm16"
            android:src="@drawable/ic_child_friendly"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm5"
            android:gravity="center"
            android:text="@string/judul"
            android:textColor="@color/putih"
            android:textSize="@dimen/dm20"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm5"
            android:gravity="center"
            android:text="@string/siap"
            android:textColor="@color/putih"
            android:textSize="@dimen/dm14"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tengah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm30"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/putih"
            android:textSize="@dimen/font16"
            android:textStyle="bold"/>

        <View
            android:layout_width="@dimen/dm20"
            android:layout_height="@dimen/dm3"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm10"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:background="@color/putih"/>

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:backgroundTint="@color/putih"
            android:hint="@string/uname"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/putih"
            android:textColorHint="@color/putih"
            android:textCursorDrawable="@drawable/putihe"
            android:textSize="@dimen/font14"/>

        <EditText
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm10"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:backgroundTint="@color/putih"
            android:hint="@string/pw"
            android:imeActionId="6"
            android:imeActionLabel="Sign In"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/putih"
            android:textColorHint="@color/putih"
            android:textCursorDrawable="@drawable/putihe"
            android:textSize="@dimen/font14"/>

        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm12"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:gravity="right"
            android:text="@string/forget"
            android:textColor="@color/putih"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tengah"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/in_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm40"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:background="@drawable/btn_biruw"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/in"
            android:textColor="@color/putih"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm50"
            android:layout_marginLeft="@dimen/dm50"
            android:layout_marginTop="@dimen/dm12"
            android:layout_marginEnd="@dimen/dm50"
            android:layout_marginRight="@dimen/dm50"
            android:gravity="center_horizontal"
            android:text="@string/regis"
            android:textColor="@color/putih"/>

    </LinearLayout>

</RelativeLayout>
